@@ -3,6 +3,7 @@ Revision history for WWW-Scraper-ISBN-BookDepository_Driver
 
         - fixed distribution name in META.
         - upgrade to WWW-Scraper-ISBN-1.00.
+        - conversion routines now moved to WWW::Scraper::ISBN::Driver.
 
 0.07    2013-12-05
         - added Data::Dumper as a test prerequisite.
